--- a/googleTranslateWidget/googleTranslateWidget.entitlements
+++ b/googleTranslateWidget/googleTranslateWidget.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>com.SwipeTranslateDesktop</string>
+		<string>LX39229ZDY.SwipeTranslateDesktop</string>
 	</array>
 	<key>com.apple.security.network.client</key>
 	<true/>
