--- a/todayWidget/todayWidget.entitlements
+++ b/todayWidget/todayWidget.entitlements
@@ -6,7 +6,7 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>com.SwipeTranslateDesktop</string>
+		<string>LX39229ZDY.SwipeTranslateDesktop</string>
 	</array>
 	<key>com.apple.security.files.user-selected.read-only</key>
 	<true/>
