--- a/googleTranslateWidget/Info.plist
+++ b/googleTranslateWidget/Info.plist
@@ -41,5 +41,19 @@
 	<string>Main</string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
+	<key>Fabric</key>
+	<dict>
+		<key>APIKey</key>
+		<string>77d5ef9be715947f2b62a420bfa583c983918389</string>
+		<key>Kits</key>
+		<array>
+			<dict>
+				<key>KitInfo</key>
+				<dict/>
+				<key>KitName</key>
+				<string>Crashlytics</string>
+			</dict>
+		</array>
+	</dict>
 </dict>
 </plist>
